src/test/data/c/fail/init_type.c
int
f(void) {
  int acc = "hello";
  return acc;
}
