src/test/data/c/fail/init_type.c.err
data/c/fail/init_type.c:3:13-20: error: assignment from incompatible types: 'char *' to 'int'
 3 |   int acc = "hello";
   |             ^~~~~~~
